chap7-back/y.output
State 13 conflicts: 3 shift/reduce
State 47 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 111 conflicts: 13 shift/reduce
State 112 conflicts: 12 shift/reduce
State 135 conflicts: 12 shift/reduce
State 137 conflicts: 12 shift/reduce
State 154 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 lvalue: ID
    3       | lvalue DOT ID
    4       | lvalue EXCLAMATION exp

    5 exp: varExp
    6    | nilExp
    7    | intExp
    8    | stringExp
    9    | binaryOpExp
   10    | unaryOpExp
   11    | callExp
   12    | seqExp
   13    | assignExp
   14    | recordCreateExp
   15    | arrayCreateExp
   16    | ifExp
   17    | whileExp
   18    | forExp
   19    | breakExp
   20    | letExp

   21 varExp: lvalue

   22 nilExp: NIL

   23 intExp: INT

   24 stringExp: STRING

   25 callExp: ID LPAREN argList RPAREN

   26 argList: %empty
   27        | exp argList_

   28 argList_: %empty
   29         | COMMA exp argList_

   30 binaryOpExp: exp PLUS exp
   31            | exp MINUS exp
   32            | exp TIMES exp
   33            | exp DIVIDE exp
   34            | exp EQ exp
   35            | exp NEQ exp
   36            | exp LT exp
   37            | exp LE exp
   38            | exp GT exp
   39            | exp GE exp
   40            | exp AND exp
   41            | exp OR exp

   42 unaryOpExp: MINUS exp

   43 recordCreateExp: ID LBRACE efieldList RBRACE

   44 efield: ID EQ exp

   45 efieldList: %empty
   46           | efield efieldList_

   47 efieldList_: %empty
   48            | COMMA efield efieldList_

   49 seqExp: LPAREN seqList_ RPAREN

   50 seqList_: %empty
   51         | seqList

   52 seqList: exp
   53        | exp SEMICOLON seqList

   54 assignExp: lvalue ASSIGN exp

   55 ifExp: IF exp THEN exp ELSE exp
   56      | IF exp THEN exp

   57 whileExp: WHILE exp DO exp

   58 forExp: FOR ID ASSIGN exp TO exp DO exp

   59 breakExp: BREAK

   60 letExp: LET decs IN seqList END

   61 arrayCreateExp: ID LBRACK exp RBRACK OF exp

   62 decs: dec
   63     | dec decs

   64 dec: funcdec
   65    | vardec
   66    | tydec

   67 funcdec: funcdecList

   68 funcdecList: funcdec_
   69            | funcdec_ funcdecList

   70 funcdec_: FUNCTION ID LPAREN fieldList RPAREN COLON ID EQ exp
   71         | FUNCTION ID LPAREN fieldList RPAREN EQ exp

   72 vardec: VAR ID ASSIGN exp
   73       | VAR ID COLON ID ASSIGN exp

   74 tydec: nametyList

   75 nametyList: namety
   76           | namety nametyList

   77 namety: TYPE ID EQ ID
   78       | TYPE ID EQ LBRACE fieldList RBRACE
   79       | TYPE ID EQ ARRAY OF ID

   80 field: ID COLON ID

   81 fieldList: %empty
   82          | field fieldList_

   83 fieldList_: %empty
   84           | COMMA field fieldList_


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 2 3 25 43 44 58 61 70 71 72 73 77 78 79 80
STRING (259) 24
INT (260) 23
COMMA (261) 29 48 84
COLON (262) 70 73 80
SEMICOLON (263) 53
LPAREN (264) 25 49 70 71
RPAREN (265) 25 49 70 71
LBRACK (266) 61
RBRACK (267) 61
LBRACE (268) 43 78
RBRACE (269) 43 78
DOT (270) 3
ASSIGN (271) 54 58 72 73
ARRAY (272) 79
IF (273) 55 56
THEN (274) 55 56
ELSE (275) 55
WHILE (276) 57
FOR (277) 58
TO (278) 58
LET (279) 60
IN (280) 60
END (281) 60
OF (282) 61 79
DO (283) 57 58
BREAK (284) 59
NIL (285) 22
FUNCTION (286) 70 71
VAR (287) 72 73
TYPE (288) 77 78 79
EXCLAMATION (289) 4
OR (290) 41
AND (291) 40
EQ (292) 34 44 70 71 77 78 79
NEQ (293) 35
LT (294) 36
LE (295) 37
GT (296) 38
GE (297) 39
PLUS (298) 30
MINUS (299) 31 42
TIMES (300) 32
DIVIDE (301) 33
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
lvalue (50)
    on left: 2 3 4, on right: 3 4 21 54
exp (51)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    1 4 27 29 30 31 32 33 34 35 36 37 38 39 40 41 42 44 52 53 54 55
    56 57 58 61 70 71 72 73
varExp (52)
    on left: 21, on right: 5
nilExp (53)
    on left: 22, on right: 6
intExp (54)
    on left: 23, on right: 7
stringExp (55)
    on left: 24, on right: 8
callExp (56)
    on left: 25, on right: 11
argList (57)
    on left: 26 27, on right: 25
argList_ (58)
    on left: 28 29, on right: 27 29
binaryOpExp (59)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 9
unaryOpExp (60)
    on left: 42, on right: 10
recordCreateExp (61)
    on left: 43, on right: 14
efield (62)
    on left: 44, on right: 46 48
efieldList (63)
    on left: 45 46, on right: 43
efieldList_ (64)
    on left: 47 48, on right: 46 48
seqExp (65)
    on left: 49, on right: 12
seqList_ (66)
    on left: 50 51, on right: 49
seqList (67)
    on left: 52 53, on right: 51 53 60
assignExp (68)
    on left: 54, on right: 13
ifExp (69)
    on left: 55 56, on right: 16
whileExp (70)
    on left: 57, on right: 17
forExp (71)
    on left: 58, on right: 18
breakExp (72)
    on left: 59, on right: 19
letExp (73)
    on left: 60, on right: 20
arrayCreateExp (74)
    on left: 61, on right: 15
decs (75)
    on left: 62 63, on right: 60 63
dec (76)
    on left: 64 65 66, on right: 62 63
funcdec (77)
    on left: 67, on right: 64
funcdecList (78)
    on left: 68 69, on right: 67 69
funcdec_ (79)
    on left: 70 71, on right: 68 69
vardec (80)
    on left: 72 73, on right: 65
tydec (81)
    on left: 74, on right: 66
nametyList (82)
    on left: 75 76, on right: 74 76
namety (83)
    on left: 77 78 79, on right: 75 76
field (84)
    on left: 80, on right: 82 84
fieldList (85)
    on left: 81 82, on right: 70 71 78
fieldList_ (86)
    on left: 83 84, on right: 82 84


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    program          go to state 12
    lvalue           go to state 13
    exp              go to state 14
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 1

    2 lvalue: ID .  [$end, COMMA, SEMICOLON, RPAREN, RBRACK, RBRACE, DOT, ASSIGN, THEN, ELSE, TO, IN, END, DO, FUNCTION, VAR, TYPE, EXCLAMATION, OR, AND, EQ, NEQ, LT, LE, GT, GE, PLUS, MINUS, TIMES, DIVIDE]
   25 callExp: ID . LPAREN argList RPAREN
   43 recordCreateExp: ID . LBRACE efieldList RBRACE
   61 arrayCreateExp: ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 31
    LBRACK  shift, and go to state 32
    LBRACE  shift, and go to state 33

    $default  reduce using rule 2 (lvalue)


State 2

   24 stringExp: STRING .

    $default  reduce using rule 24 (stringExp)


State 3

   23 intExp: INT .

    $default  reduce using rule 23 (intExp)


State 4

   49 seqExp: LPAREN . seqList_ RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    $default  reduce using rule 50 (seqList_)

    lvalue           go to state 13
    exp              go to state 34
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    seqList_         go to state 35
    seqList          go to state 36
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 5

   55 ifExp: IF . exp THEN exp ELSE exp
   56      | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 37
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 6

   57 whileExp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 38
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 7

   58 forExp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 39


State 8

   60 letExp: LET . decs IN seqList END

    FUNCTION  shift, and go to state 40
    VAR       shift, and go to state 41
    TYPE      shift, and go to state 42

    decs         go to state 43
    dec          go to state 44
    funcdec      go to state 45
    funcdecList  go to state 46
    funcdec_     go to state 47
    vardec       go to state 48
    tydec        go to state 49
    nametyList   go to state 50
    namety       go to state 51


State 9

   59 breakExp: BREAK .

    $default  reduce using rule 59 (breakExp)


State 10

   22 nilExp: NIL .

    $default  reduce using rule 22 (nilExp)


State 11

   42 unaryOpExp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 52
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 12

    0 $accept: program . $end

    $end  shift, and go to state 53


State 13

    3 lvalue: lvalue . DOT ID
    4       | lvalue . EXCLAMATION exp
   21 varExp: lvalue .  [$end, COMMA, SEMICOLON, RPAREN, RBRACK, RBRACE, DOT, ASSIGN, THEN, ELSE, TO, IN, END, DO, FUNCTION, VAR, TYPE, EXCLAMATION, OR, AND, EQ, NEQ, LT, LE, GT, GE, PLUS, MINUS, TIMES, DIVIDE]
   54 assignExp: lvalue . ASSIGN exp

    DOT          shift, and go to state 54
    ASSIGN       shift, and go to state 55
    EXCLAMATION  shift, and go to state 56

    DOT          [reduce using rule 21 (varExp)]
    ASSIGN       [reduce using rule 21 (varExp)]
    EXCLAMATION  [reduce using rule 21 (varExp)]
    $default     reduce using rule 21 (varExp)


State 14

    1 program: exp .  [$end]
   30 binaryOpExp: exp . PLUS exp
   31            | exp . MINUS exp
   32            | exp . TIMES exp
   33            | exp . DIVIDE exp
   34            | exp . EQ exp
   35            | exp . NEQ exp
   36            | exp . LT exp
   37            | exp . LE exp
   38            | exp . GT exp
   39            | exp . GE exp
   40            | exp . AND exp
   41            | exp . OR exp

    OR      shift, and go to state 57
    AND     shift, and go to state 58
    EQ      shift, and go to state 59
    NEQ     shift, and go to state 60
    LT      shift, and go to state 61
    LE      shift, and go to state 62
    GT      shift, and go to state 63
    GE      shift, and go to state 64
    PLUS    shift, and go to state 65
    MINUS   shift, and go to state 66
    TIMES   shift, and go to state 67
    DIVIDE  shift, and go to state 68

    $default  reduce using rule 1 (program)


State 15

    5 exp: varExp .

    $default  reduce using rule 5 (exp)


State 16

    6 exp: nilExp .

    $default  reduce using rule 6 (exp)


State 17

    7 exp: intExp .

    $default  reduce using rule 7 (exp)


State 18

    8 exp: stringExp .

    $default  reduce using rule 8 (exp)


State 19

   11 exp: callExp .

    $default  reduce using rule 11 (exp)


State 20

    9 exp: binaryOpExp .

    $default  reduce using rule 9 (exp)


State 21

   10 exp: unaryOpExp .

    $default  reduce using rule 10 (exp)


State 22

   14 exp: recordCreateExp .

    $default  reduce using rule 14 (exp)


State 23

   12 exp: seqExp .

    $default  reduce using rule 12 (exp)


State 24

   13 exp: assignExp .

    $default  reduce using rule 13 (exp)


State 25

   16 exp: ifExp .

    $default  reduce using rule 16 (exp)


State 26

   17 exp: whileExp .

    $default  reduce using rule 17 (exp)


State 27

   18 exp: forExp .

    $default  reduce using rule 18 (exp)


State 28

   19 exp: breakExp .

    $default  reduce using rule 19 (exp)


State 29

   20 exp: letExp .

    $default  reduce using rule 20 (exp)


State 30

   15 exp: arrayCreateExp .

    $default  reduce using rule 15 (exp)


State 31

   25 callExp: ID LPAREN . argList RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    $default  reduce using rule 26 (argList)

    lvalue           go to state 13
    exp              go to state 69
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    argList          go to state 70
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 32

   61 arrayCreateExp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 71
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 33

   43 recordCreateExp: ID LBRACE . efieldList RBRACE

    ID  shift, and go to state 72

    $default  reduce using rule 45 (efieldList)

    efield      go to state 73
    efieldList  go to state 74


State 34

   30 binaryOpExp: exp . PLUS exp
   31            | exp . MINUS exp
   32            | exp . TIMES exp
   33            | exp . DIVIDE exp
   34            | exp . EQ exp
   35            | exp . NEQ exp
   36            | exp . LT exp
   37            | exp . LE exp
   38            | exp . GT exp
   39            | exp . GE exp
   40            | exp . AND exp
   41            | exp . OR exp
   52 seqList: exp .  [RPAREN, END]
   53        | exp . SEMICOLON seqList

    SEMICOLON  shift, and go to state 75
    OR         shift, and go to state 57
    AND        shift, and go to state 58
    EQ         shift, and go to state 59
    NEQ        shift, and go to state 60
    LT         shift, and go to state 61
    LE         shift, and go to state 62
    GT         shift, and go to state 63
    GE         shift, and go to state 64
    PLUS       shift, and go to state 65
    MINUS      shift, and go to state 66
    TIMES      shift, and go to state 67
    DIVIDE     shift, and go to state 68

    $default  reduce using rule 52 (seqList)


State 35

   49 seqExp: LPAREN seqList_ . RPAREN

    RPAREN  shift, and go to state 76


State 36

   51 seqList_: seqList .

    $default  reduce using rule 51 (seqList_)


State 37

   30 binaryOpExp: exp . PLUS exp
   31            | exp . MINUS exp
   32            | exp . TIMES exp
   33            | exp . DIVIDE exp
   34            | exp . EQ exp
   35            | exp . NEQ exp
   36            | exp . LT exp
   37            | exp . LE exp
   38            | exp . GT exp
   39            | exp . GE exp
   40            | exp . AND exp
   41            | exp . OR exp
   55 ifExp: IF exp . THEN exp ELSE exp
   56      | IF exp . THEN exp

    THEN    shift, and go to state 77
    OR      shift, and go to state 57
    AND     shift, and go to state 58
    EQ      shift, and go to state 59
    NEQ     shift, and go to state 60
    LT      shift, and go to state 61
    LE      shift, and go to state 62
    GT      shift, and go to state 63
    GE      shift, and go to state 64
    PLUS    shift, and go to state 65
    MINUS   shift, and go to state 66
    TIMES   shift, and go to state 67
    DIVIDE  shift, and go to state 68


State 38

   30 binaryOpExp: exp . PLUS exp
   31            | exp . MINUS exp
   32            | exp . TIMES exp
   33            | exp . DIVIDE exp
   34            | exp . EQ exp
   35            | exp . NEQ exp
   36            | exp . LT exp
   37            | exp . LE exp
   38            | exp . GT exp
   39            | exp . GE exp
   40            | exp . AND exp
   41            | exp . OR exp
   57 whileExp: WHILE exp . DO exp

    DO      shift, and go to state 78
    OR      shift, and go to state 57
    AND     shift, and go to state 58
    EQ      shift, and go to state 59
    NEQ     shift, and go to state 60
    LT      shift, and go to state 61
    LE      shift, and go to state 62
    GT      shift, and go to state 63
    GE      shift, and go to state 64
    PLUS    shift, and go to state 65
    MINUS   shift, and go to state 66
    TIMES   shift, and go to state 67
    DIVIDE  shift, and go to state 68


State 39

   58 forExp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 79


State 40

   70 funcdec_: FUNCTION . ID LPAREN fieldList RPAREN COLON ID EQ exp
   71         | FUNCTION . ID LPAREN fieldList RPAREN EQ exp

    ID  shift, and go to state 80


State 41

   72 vardec: VAR . ID ASSIGN exp
   73       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 81


State 42

   77 namety: TYPE . ID EQ ID
   78       | TYPE . ID EQ LBRACE fieldList RBRACE
   79       | TYPE . ID EQ ARRAY OF ID

    ID  shift, and go to state 82


State 43

   60 letExp: LET decs . IN seqList END

    IN  shift, and go to state 83


State 44

   62 decs: dec .  [IN]
   63     | dec . decs

    FUNCTION  shift, and go to state 40
    VAR       shift, and go to state 41
    TYPE      shift, and go to state 42

    $default  reduce using rule 62 (decs)

    decs         go to state 84
    dec          go to state 44
    funcdec      go to state 45
    funcdecList  go to state 46
    funcdec_     go to state 47
    vardec       go to state 48
    tydec        go to state 49
    nametyList   go to state 50
    namety       go to state 51


State 45

   64 dec: funcdec .

    $default  reduce using rule 64 (dec)


State 46

   67 funcdec: funcdecList .

    $default  reduce using rule 67 (funcdec)


State 47

   68 funcdecList: funcdec_ .  [IN, FUNCTION, VAR, TYPE]
   69            | funcdec_ . funcdecList

    FUNCTION  shift, and go to state 40

    FUNCTION  [reduce using rule 68 (funcdecList)]
    $default  reduce using rule 68 (funcdecList)

    funcdecList  go to state 85
    funcdec_     go to state 47


State 48

   65 dec: vardec .

    $default  reduce using rule 65 (dec)


State 49

   66 dec: tydec .

    $default  reduce using rule 66 (dec)


State 50

   74 tydec: nametyList .

    $default  reduce using rule 74 (tydec)


State 51

   75 nametyList: namety .  [IN, FUNCTION, VAR, TYPE]
   76           | namety . nametyList

    TYPE  shift, and go to state 42

    TYPE      [reduce using rule 75 (nametyList)]
    $default  reduce using rule 75 (nametyList)

    nametyList  go to state 86
    namety      go to state 51


State 52

   30 binaryOpExp: exp . PLUS exp
   31            | exp . MINUS exp
   32            | exp . TIMES exp
   33            | exp . DIVIDE exp
   34            | exp . EQ exp
   35            | exp . NEQ exp
   36            | exp . LT exp
   37            | exp . LE exp
   38            | exp . GT exp
   39            | exp . GE exp
   40            | exp . AND exp
   41            | exp . OR exp
   42 unaryOpExp: MINUS exp .  [$end, COMMA, SEMICOLON, RPAREN, RBRACK, RBRACE, DOT, ASSIGN, THEN, ELSE, TO, IN, END, DO, FUNCTION, VAR, TYPE, EXCLAMATION, OR, AND, EQ, NEQ, LT, LE, GT, GE, PLUS, MINUS, TIMES, DIVIDE]

    $default  reduce using rule 42 (unaryOpExp)


State 53

    0 $accept: program $end .

    $default  accept


State 54

    3 lvalue: lvalue DOT . ID

    ID  shift, and go to state 87


State 55

   54 assignExp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 88
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 56

    4 lvalue: lvalue EXCLAMATION . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 89
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 57

   41 binaryOpExp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 90
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 58

   40 binaryOpExp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 91
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 59

   34 binaryOpExp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 92
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 60

   35 binaryOpExp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 93
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 61

   36 binaryOpExp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 94
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 62

   37 binaryOpExp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 95
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 63

   38 binaryOpExp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 96
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 64

   39 binaryOpExp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 97
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 65

   30 binaryOpExp: exp PLUS . exp
